plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.11'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.jeju_campking'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "16"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // jsp 설정
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    implementation 'javax.servlet:jstl:1.2'

    // 데이터 베이스 라이브러리
    // 라이브러리 설치시 데이터 베이스 연결 설정 필수 !
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
    // mariadb connector
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.0.8'

    // 마이바티스 라이브러리
    // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'

    // 입력값 유효성 검증 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //스프링 시큐리티 모듈
    implementation 'org.springframework.boot:spring-boot-starter-security'

}

tasks.named('test') {
    useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_16
